# jolt

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.cursor/hooks/state/: continual-learning-index.json  continual-learning.json
.github/workflows/: ci.yml  docs.yml  nightly.yml  release.yml
compiler/jolt-ast/: Cargo.toml
compiler/jolt-ast/src/: debug.rs  expr.rs  item.rs  lib.rs  span_ext.rs  stmt.rs
compiler/jolt-backend-fast/: Cargo.toml
compiler/jolt-backend-fast/src/: lib.rs
compiler/jolt-backend-interp/: Cargo.toml
compiler/jolt-backend-interp/src/: interp.rs  lib.rs  query.rs  tests.rs  value.rs
compiler/jolt-backend-llvm/: Cargo.toml
compiler/jolt-backend-llvm/src/: lib.rs
compiler/jolt-cache/: Cargo.toml
compiler/jolt-cache/src/: lib.rs
compiler/jolt-capability/: Cargo.toml
compiler/jolt-capability/src/: lib.rs
compiler/jolt-comptime/: Cargo.toml
compiler/jolt-comptime/src/: lib.rs
compiler/jolt-custody/: Cargo.toml
compiler/jolt-custody/src/: check.rs  error.rs  lib.rs  liveness.rs  query.rs  tests.rs
compiler/jolt-diagnostics/: Cargo.toml
compiler/jolt-diagnostics/src/: lib.rs
compiler/jolt-fmt/: Cargo.toml
compiler/jolt-fmt/src/: lib.rs  printer.rs  query.rs  tests.rs
compiler/jolt-harness/: Cargo.toml
compiler/jolt-harness/src/: lib.rs  ui.rs
compiler/jolt-lexer/: Cargo.toml
compiler/jolt-lexer/src/: error.rs  lexer.rs  lib.rs  query.rs  tests.rs  token.rs
compiler/jolt-mdbook/: Cargo.toml
compiler/jolt-mdbook/src/: main.rs
compiler/jolt-mir/: Cargo.toml
compiler/jolt-mir/src/: lib.rs  lower.rs  mir.rs  query.rs  tests.rs
compiler/jolt-mono/: Cargo.toml
compiler/jolt-mono/src/: lib.rs
compiler/jolt-parser/: Cargo.toml
compiler/jolt-parser/src/: cursor.rs  error.rs  expr.rs  item.rs  lib.rs  parser.rs  query.rs  stmt.rs  tests.rs
compiler/jolt-query/: Cargo.toml
compiler/jolt-query/src/: engine.rs  graph.rs  key.rs  lib.rs
compiler/jolt-resolve/: Cargo.toml
compiler/jolt-resolve/src/: error.rs  lib.rs  query.rs  resolve.rs  scope.rs  tests.rs
compiler/jolt-source/: Cargo.toml
compiler/jolt-source/src/: lib.rs
compiler/jolt-test-runner/: Cargo.toml
compiler/jolt-test-runner/src/: lib.rs  query.rs  runner.rs
compiler/jolt-types/: Cargo.toml
compiler/jolt-types/src/: check.rs  error.rs  lib.rs  query.rs  tests.rs  ty.rs
compiler/libjolt/: Cargo.toml
compiler/libjolt/src/: check.rs  lib.rs  run.rs  test.rs
docs/: README.md  SUMMARY.md  book.toml  index.md
docs/adr/: 0000-template.md  README.md
docs/design/: compiler-status.md  custodian-ergonomics.md  jolt-0.1-preview.md  jolt-build-system.md  jolt-caching-system.md  jolt-changes-v0.4.md  jolt-design-options.md  jolt-memory-naming-options.md  jolt-safety-attributes.md  jolt-stdlib-outline.md  jolt-toolchain.md  year-1.md  year-5.md
docs/learn/: curriculum.yaml
docs/learn/assets/: jolt-run.js  learn.css
docs/learn/examples/: arithmetic.md  bindings-immutable.md  bindings-mutable.md  borrow-shared.md  double-value.md  for-range-int.md  function-tail-expr.md  hello-world.md  if-else.md  loop-break.md  max-function.md  move-string.md  mutable-claim.md  println-basics.md  struct-point.md
docs/learn/guides/: ways-to-bind.md  ways-to-borrow.md  ways-to-iterate.md  ways-to-return.md  ways-to-test.md
docs/learn/migrations/: from-c.md  from-go.md
docs/learn/quizzes/: custodian-02.toml
docs/learn/tour/: 01-hello.md  02-bindings.md  03-functions.md  04-borrow-shared.md  04-custodian.md  05-structs.md  06-for.md  06-if-else.md  06-loop.md  11-testing.md
docs/spec/: jolt-cheatsheet.md  jolt-grammar.md  jolt-spec-v0.2.md  jolt-spec-v0.3.md  jolt-spec-v0.4.md
docs/tutorial/: jolt-tour.md
driver/jolt-cli/: Cargo.toml
driver/jolt-cli/src/: main.rs
examples/: README.md
joltlings/: info.toml
joltlings/exercises/01_intro/: main.jolt
joltlings/exercises/04_if_else/: main.jolt
joltlings/exercises/10_assert/: main.jolt
joltlings/exercises/11_custody_ok/: main.jolt
joltlings/exercises/12_test/: main.jolt
joltlings/exercises/13_fix_move/: main.jolt
joltlings/exercises/15_count_for/: main.jolt
learn/: curriculum.yaml  hub.md  joltlings.md
learn/examples/: arithmetic.md  bindings-immutable.md  bindings-mutable.md  borrow-shared.md  double-value.md  for-range-int.md  function-tail-expr.md  hello-world.md  if-else.md  index.md  loop-break.md  max-function.md  mutable-claim.md  println-basics.md  test-assert-eq.md  test-should-fail.md
learn/guides/: index.md  ways-to-bind.md  ways-to-borrow.md  ways-to-iterate.md  ways-to-return.md  ways-to-test.md
learn/migrations/: from-rust.md
learn/quizzes/: custodian-01.toml  custodian-03.toml
learn/tour/: 01-hello.md  02-bindings.md  03-functions.md  04-borrow-shared.md  04-custodian.md  06-for.md  06-if-else.md  06-loop.md  11-testing.md
playground/: README.md
registry/: README.md
selfhost/: README.md
stdlib/: README.md
tests/bench/: README.md
tests/custody/: README.md
tests/custody/should_accept/: borrow_in_for.jolt  borrow_in_if.jolt  borrow_nll.jolt  claim_after_borrow_release.jolt  (+6 more)
tests/fuzz/: README.md
tests/property/: README.md
tests/run/: README.md  arithmetic.jolt  for_sum.jolt  hello.jolt  hello.stdout
tests/sim/: README.md
tests/test/: README.md  passing.jolt  should_fail.jolt
tests/tutorial/: README.md  bindings.jolt  borrow_shared.jolt  double.jolt  testing.jolt  testing.stdout
tests/ui/: README.md
tools/: README.md
tools/jolt-fmt/: Cargo.toml
tools/jolt-learn-runner/: Cargo.toml
tools/jolt-learn-runner/src/: lib.rs  main.rs
tools/jolt-test/: Cargo.toml
tools/joltlings/: Cargo.toml  README.md
wiki/: 00-repo-structure.md  README.md  build.jolt  jolt-cheatsheet.md  jolt-compiletime-safety.md  jolt-decisions.md  jolt-implementation-plan.md  jolt-index.md  jolt-review.md  jolt-security-model.md  jolt-testing.md  jolt-toolchain-extended.md  jolt-tour.md  year-1.md  year-2.md  year-3.md  year-4.md
xtask/: Cargo.toml
xtask/src/: learn.rs  main.rs
(+64 files in other folders)
