[workspace]
resolver = "2"
members = [
    "compiler/jolt-source",
    "compiler/jolt-lexer",
    "compiler/jolt-ast",
    "compiler/jolt-parser",
    "compiler/jolt-query",
    "compiler/jolt-resolve",
    "compiler/jolt-types",
    "compiler/jolt-custody",
    "compiler/jolt-capability",
    "compiler/jolt-comptime",
    "compiler/jolt-mono",
    "compiler/jolt-mir",
    "compiler/jolt-backend-interp",
    "compiler/jolt-test-runner",
    "compiler/jolt-backend-llvm",
    "compiler/jolt-backend-fast",
    "compiler/jolt-diagnostics",
    "compiler/jolt-cache",
    "compiler/jolt-fmt",
    "compiler/libjolt",
    "compiler/jolt-harness",
    "compiler/jolt-mdbook",
    "driver/jolt-cli",
    "tools/jolt-fmt",
    "tools/jolt-test",
    "tools/jolt-learn-runner",
    "tools/joltlings",
    "xtask",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/jolt-lang/jolt"
rust-version = "1.85"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
