[package]
name = "jolt-backend-interp"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
jolt-mir = { path = "../jolt-mir" }
jolt-query = { path = "../jolt-query" }
jolt-source = { path = "../jolt-source" }

[dev-dependencies]
jolt-lexer = { path = "../jolt-lexer" }
jolt-parser = { path = "../jolt-parser" }
jolt-resolve = { path = "../jolt-resolve" }
