[package]
name = "jolt-custody"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
jolt-ast = { path = "../jolt-ast" }
jolt-diagnostics = { path = "../jolt-diagnostics" }
jolt-query = { path = "../jolt-query" }
jolt-resolve = { path = "../jolt-resolve" }
jolt-source = { path = "../jolt-source" }
jolt-types = { path = "../jolt-types" }

[dev-dependencies]
jolt-parser = { path = "../jolt-parser" }
jolt-lexer = { path = "../jolt-lexer" }
jolt-resolve = { path = "../jolt-resolve" }
