[package]
name = "jolt-mir"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
jolt-ast = { path = "../jolt-ast" }
jolt-custody = { path = "../jolt-custody" }
jolt-diagnostics = { path = "../jolt-diagnostics" }
jolt-query = { path = "../jolt-query" }
jolt-source = { path = "../jolt-source" }

[dev-dependencies]
jolt-lexer = { path = "../jolt-lexer" }
jolt-parser = { path = "../jolt-parser" }
jolt-resolve = { path = "../jolt-resolve" }
jolt-types = { path = "../jolt-types" }
