[package]
name = "jolt-learn-runner"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "jolt-learn-runner"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny_http = "0.12"

[dev-dependencies]
serde_json = "1.0"
